Add @viewport rule to CSS, maybe it will become standard some day...

--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -199,3 +199,9 @@ article {
         white-space: pre;
     }
 }
+
+@viewport {
+    width: extend-to-zoom 100%;
+    height: extend-to-zoom 100%;
+    zoom: 1;
+}
