--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -33,6 +33,10 @@ ul, ol, dl {
     margin: 0 0 1.4em 0;
 }
 
+li, dd , dt {
+    margin: 0 0 0.3em 0;
+}
+
 h1, h2, h3, h4, h5, h6 {
     padding: 0;
     margin: 0;
