Style author paragraph.

--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -30,7 +30,7 @@ ul, ol, dl {
 }
 
 li, dd , dt {
-    margin: 0 0 0.3em 0;
+    margin: 0 0 0.35em 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -60,6 +60,12 @@ h3 {
 h4, h5, h6 {
     font-weight: bold;
     font-size: 1.0em;
+}
+
+header > p {
+    font-weight: 300;
+    font-size: 0.9em;
+    margin-top: 0.3888889em;
 }
 
 nav {
@@ -116,13 +122,13 @@ table {
 
 th {
     font-size: 0.9em;
-    padding: 0.388888em;
+    padding: 0.3888889em 0.7777778em;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
 }
 
 td {
-    padding: 0.388888em;
+    padding: 0.35em 0.7em;
     border-right: 1px solid black;
 }
 
