--- a/site-assets/api.css
+++ b/site-assets/api.css
@@ -1,3 +1,22 @@
+nav {
+    position: fixed;
+    overflow: scroll;
+    top: 0;
+    left: 0;
+    width: 12.6em;
+    height: 100%;
+    margin: 0;
+    padding: 0 1.4em 0 1.4em;
+}
+
+nav > header {
+    margin-top: 1.4em;
+}
+
+body {
+    margin: 0 0 0 16.8em;
+}
+
 h3 {
     padding-top: 1.1666666em;
     border-top: 0.1em solid black;
