style.css: Fix bug introduced by 8a4fbbf3 where <b> failed.

--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -66,6 +66,9 @@ header > p {
     font-size: 0.9em;
     margin-top: 0.3888889em;
 }
+header > p > b {
+    font-weight: bold;
+}
 
 nav {
     margin: 1.4em 0;
