api.css: Fix up for previous commit.

--- a/site-assets/api.css
+++ b/site-assets/api.css
@@ -8,6 +8,9 @@ nav {
     margin: 0;
     padding: 0 1.4em 0 1.4em;
 }
+nav > header {
+    margin-top: 1.4em;
+}
 nav ul, nav ol {
     padding-left: 0.7em;
 }
