--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -13,6 +13,7 @@ p {
 
 code, pre, tt {
     font-family: Inconsolata, monospace;
+    font-size: 1em;
 }
 
 a:link {
@@ -90,7 +91,6 @@ figure audio {
     width: 100%;
     border-radius: 0.175em;
 }
-    
 
 figure img {
     border-radius: 0.35em;
