style: decrease pre font-size for small displays.

--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -203,6 +203,9 @@ article {
         content:"\a";
         white-space: pre;
     }
+    pre {
+        font-size: 0.8em;
+    }
 }
 
 @viewport {
