style: prefer Calibri font over Arial (Windows default)

--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -1,7 +1,7 @@
 html {
     background: white;
     color: black;
-    font-family: Helvetica Neue, Helvetica, Lato, Arial, sans-serif;
+    font-family: Helvetica Neue, Helvetica, Lato, Calibri, sans-serif;
     line-height: 1.4;
     margin: 0 1.4em 0 1.4em;
     padding: 0;
